Add working (but ugly) code for switching to mono mode. Remove config.h. Improve makefile. Fix pgm_read_delta_word(). Lesser cleanups

--- a/src/makefile
+++ b/src/makefile
@@ -1,11 +1,12 @@
 F_CPU = 20000000UL
 F_SAMPLE = 28000
 MIDI_BAUD = 31250
+MIDI_MAX_VOICES = 8
 MCU = atmega328p
 
 CC = avr-gcc
 OBJDUMP = avr-objdump
-CFLAGS = -DF_CPU=$(F_CPU) -DMIDI_BAUD=$(MIDI_BAUD) -DF_SAMPLE=$(F_SAMPLE) -mmcu=$(MCU) -O3 -funroll-loops -flto -Wall
+CFLAGS = -DF_CPU=$(F_CPU) -DMIDI_BAUD=$(MIDI_BAUD) -DF_SAMPLE=$(F_SAMPLE) -DMIDI_MAX_VOICES=$(MIDI_MAX_VOICES) -mmcu=$(MCU) -O3 -funroll-loops -flto -Wall
 
 SOURCES = usynth.c midi.c midi_program.c data/notes_table.c data/env_table.c ppg/ppg_data.c ppg/ppg.c
 OBJECTS = $(patsubst %.c,%.o,$(SOURCES))
@@ -23,7 +24,7 @@ usynth.elf: $(OBJECTS)
 	avr-size -C --mcu=$(MCU) $@
 
 prog: usynth.elf
-	avrdude -c usbasp -p m328p -U flash:w:usynth.elf
+	avrdude -c usbasp -p $(MCU) -U flash:w:usynth.elf
 
 -include $(DEPENDS)
 
