Move part of the PPG data to EEPROM. Compile with -mrelax.

--- a/src/makefile
+++ b/src/makefile
@@ -3,11 +3,12 @@ F_SAMPLE = 28000
 MIDI_BAUD = 31250
 MIDI_MAX_VOICES = 16
 MCU = atmega328p
+PROGRAMMER = usbasp
 
 CC = avr-gcc
 OBJDUMP = avr-objdump
 DEFINES = -DF_CPU=$(F_CPU) -DMIDI_BAUD=$(MIDI_BAUD) -DF_SAMPLE=$(F_SAMPLE) -DMIDI_MAX_VOICES=$(MIDI_MAX_VOICES)
-CFLAGS = $(DEFINES) -mmcu=$(MCU) -O2 -funroll-loops -g -fomit-frame-pointer -faggressive-loop-optimizations -flto -Wall
+CFLAGS = $(DEFINES) -mmcu=$(MCU) -O2 -funroll-loops -g -fdata-sections -ffunction-sections -Wl,--gc-sections -fomit-frame-pointer -faggressive-loop-optimizations -flto -mrelax -Wall
 
 SOURCES = usynth.c midi.c midi_program.c data/notes_table.c data/env_table.c ppg/ppg_data.c ppg/ppg.c
 OBJECTS = $(patsubst %.c,%.o,$(SOURCES))
@@ -21,11 +22,11 @@ clean:
 	-rm -f usynth.elf usynth.lss $(OBJECTS) $(DEPENDS)
 
 usynth.elf: $(OBJECTS)
-	$(CC) $(CFLAGS) $^ -o $@
+	$(CC) $(CFLAGS) -Xlinker -Map=usynth.map $^ -o $@ 
 	avr-size -C --mcu=$(MCU) $@
 
 prog: usynth.elf
-	avrdude -c usbasp -p $(MCU) -U flash:w:usynth.elf
+	avrdude -c $(PROGRAMMER) -p $(MCU) -U flash:w:$^ -U eeprom:w:$^
 
 -include $(DEPENDS)
 
