Automatical preset compilation

--- a/src/makefile
+++ b/src/makefile
@@ -8,7 +8,7 @@ PROGRAMMER = usbasp
 CC = avr-gcc
 OBJDUMP = avr-objdump
 DEFINES = -DF_CPU=$(F_CPU) -DMIDI_BAUD=$(MIDI_BAUD) -DF_SAMPLE=$(F_SAMPLE) -DMIDI_MAX_VOICES=$(MIDI_MAX_VOICES)
-CFLAGS = $(DEFINES) -mmcu=$(MCU) -O3 -funroll-loops -g -fdata-sections -ffunction-sections -Wl,--gc-sections -fomit-frame-pointer -faggressive-loop-optimizations -flto -mrelax -Wall -fwrapv
+CFLAGS = $(DEFINES) -mmcu=$(MCU) -O3 -funroll-loops -g -fdata-sections -ffunction-sections -Wl,--gc-sections -fomit-frame-pointer -faggressive-loop-optimizations -flto -mrelax -Wall -fwrapv -fstrict-aliasing
 
 SOURCES = usynth.c midi.c midi_program.c data/notes_table.c data/env_table.c ppg/ppg_data.c ppg/ppg.c
 OBJECTS = $(patsubst %.c,%.o,$(SOURCES))
@@ -20,6 +20,7 @@ all: usynth.elf usynth.lss
 
 clean:
 	-rm -f usynth.elf usynth.lss $(OBJECTS) $(DEPENDS)
+	make -C data/presets clean
 
 usynth.elf: $(OBJECTS)
 	$(CC) $(CFLAGS) -Xlinker -Map=usynth.map $^ -o $@ 
@@ -38,3 +39,8 @@ prog_fast: usynth.elf
 
 %.lss: %.elf
 	$(OBJDUMP) -drwCSg $< > $@
+
+data/presets/generated.h: data/presets/makefile $(wildcard data/presets/*.prog)
+	make -C data/presets
+	
+midi_program.c: data/presets/generated.h
